Добавлена пагинация, форма для отправки поста по email
Django 4 в примерах (глава 2)

--- a/config/blog/templates/blog/post/detail.html
+++ b/config/blog/templates/blog/post/detail.html
@@ -10,4 +10,9 @@
     <p class="date">
         Published {{ post.published }} by {{ post.author }}
     </p>
+    <p>
+        <a href="{% url "blog:share_post_by_email" post.id %}">
+            Поделиться
+        </a>
+    </p>
 {% endblock %}
