--- a/config/blog/templates/blog/post/detail.html
+++ b/config/blog/templates/blog/post/detail.html
@@ -1,5 +1,4 @@
 {% extends "blog/base.html" %}
-{% load comments_extras %}
 
 {% block title %}
     {{ post.title }}
@@ -7,6 +6,16 @@
 
 {% block content %}
     <h1>{{ post.title }}</h1>
+
+    <p class="tags">
+        Tags:
+        {% for tag in post.tags.all %}
+            <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+                {{ tag.name }}
+            </a>
+            {% if not forloop.last %}, {% endif %}
+        {% endfor %}
+    </p>
     {{ post.body|linebreaks }}
     <p class="date">
         Published {{ post.published }} by {{ post.author }}
@@ -16,6 +25,17 @@
             Поделиться
         </a>
     </p>
+
+    <h2>Похожие посты</h2>
+    {% for post in similar_posts %}
+        <p>
+            <a href="{{ post.get_absolute_url }}">
+                {{ post.title }}
+            </a>
+        </p>
+    {% empty %}
+        Пока нет
+    {% endfor %}
 
     {% with comments.count as total_comments %}
         <h2>
