--- a/config/blog/templates/blog/post/list.html
+++ b/config/blog/templates/blog/post/list.html
@@ -6,16 +6,32 @@
 
 {% block content %}
     <h1>Мой блог</h1>
+    {% if tag %}
+    <h2>
+        Посты с тегом "{{ tag.name }}"
+    </h2>
+    {% endif %}
+
     {% for post in posts %}
         <h2>
             <a href="{{ post.get_absolute_url }}">
                 {{ post.title }}
             </a>
         </h2>
+        <p class="tags">
+            Tags:
+            {% for tag in post.tags.all %}
+                <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+                    {{ tag.name }}
+                </a>
+                {% if not forloop.last %}, {% endif %}
+            {% endfor %}
+        </p>
         {{ post.body|truncatewords:30|linebreaks }}
         <p class="date">
             Published {{ post.published }} by {{ post.author }}
         </p>
     {% endfor %}
+
     {% include "blog/pagination.html" with page=posts %}
 {% endblock %}
